// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-0:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-disabled="false"]:hover,
.emotion-0 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-0:focus-within {
  border-color: #792dd4;
}

.emotion-0[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-0[data-size='medium'] {
  height: 2.5rem;
}

.emotion-0[data-size='large'] {
  height: 3rem;
}

.emotion-0[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-0[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-0[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-2 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-2[data-size='large'] {
  font-size: 1rem;
}

.emotion-2:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-2:not(:disabled):active,
.emotion-2:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-2:-moz-read-only {
  cursor: default;
}

.emotion-2:read-only {
  cursor: default;
}

.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2[data-period="true"] {
  color: #727683;
}

.emotion-2[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-2::-moz-selection {
  background: none;
}

.emotion-2::selection {
  background: none;
}

.emotion-4 {
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r0»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: text;
  padding: 0.5rem;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  border: 1px solid #d9dadd;
}

.emotion-0:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-0[data-disabled="false"]:hover,
.emotion-0 [data-disabled="false"]:focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-0:focus-within {
  border-color: #792dd4;
}

.emotion-0[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-0[data-size='medium'] {
  height: 2.5rem;
}

.emotion-0[data-size='large'] {
  height: 3rem;
}

.emotion-0[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-0[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-0[data-error='true']:not([data-disabled="true"]):not([data-readonly="true"]):hover {
  border-color: #92103f;
}

.emotion-2 {
  border: none;
  outline: none;
  background: transparent;
  font-size: 0.875rem;
  width: 1.5625rem;
  height: 1.5rem;
  text-align: center;
  border-radius: 0.25rem;
  color: #3f4250;
  caret-color: transparent;
}

.emotion-2[data-size='large'] {
  font-size: 1rem;
}

.emotion-2:not(:disabled):hover {
  background-color: #e9eaeb;
  color: #727683;
}

.emotion-2:not(:disabled):active,
.emotion-2:not(:disabled):focus {
  background-color: #e9eaeb;
  color: #3f4250;
}

.emotion-2:-moz-read-only {
  cursor: default;
}

.emotion-2:read-only {
  cursor: default;
}

.emotion-2:disabled {
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2[data-period="true"] {
  color: #727683;
}

.emotion-2[data-period="true"][data-size="large"] {
  width: calc(1.5625rem + 0.125rem);
}

.emotion-2::-moz-selection {
  background: none;
}

.emotion-2::selection {
  background: none;
}

.emotion-4 {
  padding-inline: 0.125rem;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
      >
        <label
          class="uv_17td3g91 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
          for="«r4»"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="emotion-0 emotion-1 uv_toi52u0 uv_toi52u3d uv_toi52u2j uv_toi52u7d uv_toi52u6p"
          data-disabled="false"
          data-error="false"
          data-readonly="false"
          data-size="large"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="emotion-4 emotion-5 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52u5d"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="false"
                class="emotion-2 emotion-3"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
